[project]
name = "sam3"
version = "0.1.0"
description = "Griptape Node Library for sam3"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
    "sam3",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
