[project]
name = "griptape-nodes-sam3-library"
version = "0.1.0"
description = "Griptape Node Library for SAM3 (Segment Anything with Concepts)"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]
# Note: sam3, torch, torchvision, torchaudio are installed by sam3_library_advanced.py
# at runtime via the submodule, not as pip dependencies

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
